--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Neumorphism Login Form</title>
+    <title>Neumorphism Login</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="main">
+      <div class="container a-container" id="a-container">
+        <form class="form" id="a-form" method="" action="">
+          <h2 class="title">Crie sua conta com</h2>
+          <div class="form__icons">
+            <img class="form__icon" src="svg/fb.svg" alt="" />
+            <img class="form__icon" src="svg/linkedin.svg" />
+            <img class="form__icon" src="svg/twitter.svg" />
+          </div>
+          <span class="form__span">Ou use seu Email</span>
+          <input class="form__input" type="text" placeholder="Nome" />
+          <input class="form__input" type="text" placeholder="Email" />
+          <input class="form__input" type="password" placeholder="Senha" />
+          <button class="button submit">CRIAR AGORA</button>
+        </form>
+      </div>
+
+      <div class="container b-container" id="b-container">
+        <form class="form" id="b-form" method="" action="">
+          <h2 class="title">Entrar com</h2>
+          <div class="form__icons">
+            <img class="form__icon" src="svg/fb.svg" alt="" />
+            <img class="form__icon" src="svg/linkedin.svg" />
+            <img class="form__icon" src="svg/twitter.svg" />
+          </div>
+          <span class="form__span">Ou use seu Email</span>
+          <input class="form__input" type="text" placeholder="Email" />
+          <input class="form__input" type="password" placeholder="Senha" />
+          <a class="form__link">Esqueceu sua senha?</a>
+          <button class="button submit">ENTRAR</button>
+        </form>
+      </div>
+
+      <div class="switch" id="switch-cnt">
+        <div class="switch__circle"></div>
+        <div class="switch__circle switch__circle--t"></div>
+        <div class="switch__container" id="switch-c1">
+          <h2 class="title">Bom revê-lo!</h2>
+          <p class="description">Para se manter conectado, faça login com seus dados</p>
+          <button class="switch__button button switch-btn">ENTRAR</button>
+        </div>
+        <div class="switch__container is-hidden" id="switch-c2">
+          <h2 class="switch__title title">Seja bem vindo!</h2>
+          <p class="description">Insira seus dados para começar</p>
+          <button class="switch__button button switch-btn">CRIAR</button>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
