--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="switch__container is-hidden" id="switch-c2">
           <h2 class="switch__title title">Seja bem vindo!</h2>
           <p class="description">Insira seus dados para começar</p>
-          <button class="switch__button button switch-btn">CRIAR</button>
+          <button class="switch__button button switch-btn">CRIAR CONTA</button>
         </div>
       </div>
     </div>
